--- a/alveaux.html
+++ b/alveaux.html
@@ -464,6 +464,9 @@
             <div class="panelProceso2__contenido my-5">
               <img  class="image panelProceso2__img pr-5" src="assets/img/alveaArticulo/wireframe7.png" alt="">
             </div>
+            <div class="panelProceso2__botonContenedor">
+              <button class="boton__customBlack" data-toggle="modal" data-target="#alveaui">Ver mas imágenes</button>
+            </div>
           </div>
         </div>
     </section><!--PAnelArte-->
@@ -490,6 +493,12 @@
             <p class="articulo__parrafo-1">Esto a su vez me permitió caracterizar a los distintos personajes y enemigos que poblarían el mundo del juego</p>
             <div class="panelProceso2__contenido my-5">
               <img  class="image panelProceso2__img" src="assets/img/alveaArticulo/arte4.png" alt="">
+            </div>
+            <div class="panelProceso2__contenido my-5">
+              <img  class="image panelProceso2__img" src="assets/img/alveaArticulo/arte5.png" alt="">
+            </div>
+            <div class="panelProceso2__contenido my-5">
+              <img  class="image panelProceso2__img" src="assets/img/alveaArticulo/arte6.png" alt="">
             </div>
           </div>
         </div>
@@ -529,5 +538,36 @@
       </div>
   </section><!--Panelconclusion-->
 </div><!--FINAL WRAPPER-->
+
+<!--Modales-->
+<div class="modal fade modal-fullscreen-xl" id="alveaui" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="boton__header close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body modal__body-ilustracion">
+        <div class="modal__vertical">
+          <img class="d-block modal__vertical-elemento" src="assets/img/ilustraciones/alvea-ui1.png" alt="Alvea-personaje-concept-art">
+          <img class="d-block modal__vertical-elemento" src="assets/img/ilustraciones/alvea-ui2.png" alt="Alvea-personaje-carta-de-referencia">
+          <img class="d-block modal__vertical-elemento" src="assets/img/ilustraciones/alvea-ui3.png" alt="Alvea-personaje-referencia-objeto-1">
+          <img class="d-block modal__vertical-elemento" src="assets/img/ilustraciones/alvea-ui4.png" alt="Alvea-personaje-referencia-objeto-2">
+          <img class="d-block modal__vertical-elemento" src="assets/img/ilustraciones/alvea-ui5.png" alt="Alvea-personaje-sprites-ingame">
+          <img class="d-block modal__vertical-elemento" src="assets/img/ilustraciones/alvea-ui6.png" alt="Alvea-personaje-sprites-ingame">
+          <img class="d-block modal__vertical-elemento" src="assets/img/ilustraciones/alvea-ui7.png" alt="Alvea-personaje-sprites-ingame">
+          <img class="d-block modal__vertical-elemento" src="assets/img/ilustraciones/alvea-ui8.png" alt="Alvea-personaje-sprites-ingame">
+ 
+        </div>
+        <div class="d-none d-lg-block modal__imagen-info">
+          <h3 class="modales__titulo texto__dark">Alvea: La Leyenda de los Vientos</h3>
+          <h4 class="modales__subtitulo texto__dark">Diseño de interfaz</h4>
+          <h4 class="modales__subtitulo texto__dark">Proyecto de titulación</h4>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 </body>
 </html>
