Cambio de curriculum

--- a/en/about.html
+++ b/en/about.html
@@ -9,7 +9,7 @@
     <!--Font Awesome-->
     <script src="https://kit.fontawesome.com/41b8753ddc.js" crossorigin="anonymous"></script>  
     <!--Mi estilo-->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
     <!--Favicon-->
     <link rel="icon" href="assets/favicon.ico" type="image/x-icon"/>
 
@@ -30,29 +30,29 @@
     <div class="collapse navbar-collapse text-right navegacion__contenido" id="navbarNav">
       <ul class="navbar-nav navegacion__contenido-lista">
         <li class="nav-item navegacion__idioma">
-          <a class="nav-link navegacion__contenido-link" href="en/about.html">English<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item navegacion__quiensoy">
-          <a class="nav-link navegacion__contenido-link" href="sobre-mi.html">Quien soy <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item d-lg-none">
-          <a class="nav-link navegacion__contenido-link" href="#trabajos">Diseño UX<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item d-lg-none">
-          <a class="nav-link navegacion__contenido-link" href="diseno-grafico.html">Diseño gráfico<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item d-lg-none">
-          <a class="nav-link navegacion__contenido-link" href="ilustracion.html">Ilustración<span class="sr-only">(current)</span></a>
+          <a class="nav-link navegacion__contenido-link" href="../sobre-mi.html">Español<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item dropdown d-none d-lg-block">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Mis trabajos
+            My work
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#trabajos">Diseño UX/UI</a>
-            <a class="dropdown-item" href="diseno-grafico.html">Diseño gráfico</a>
-            <a class="dropdown-item" href="ilustracion.html">Ilustración</a>
+            <a class="dropdown-item" href="index.html#trabajos">UX/UI Design</a>
+            <a class="dropdown-item" href="graphic-design.html">Graphic Design</a>
+            <a class="dropdown-item" href="illustration.html">Ilustration</a>
           </div>
+        </li>
+        <li class="nav-item navegacion__quiensoy">
+          <a class="nav-link navegacion__contenido-link" href="about.html">About Me <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item d-lg-none">
+          <a class="nav-link navegacion__contenido-link" href="#trabajos">UX/UI Design<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item d-lg-none">
+          <a class="nav-link navegacion__contenido-link" href="graphic-design.html">Graphic Design<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item d-lg-none">
+          <a class="nav-link navegacion__contenido-link" href="illustration.html">Ilustration<span class="sr-only">(current)</span></a>
         </li>
       </ul> 
     </div>
@@ -71,15 +71,15 @@
     <header class="hero sobremi__hero">
       <div class="container-fluid hero__container"> 
         <div class="row">
-          <h1 class="col-md-4 col-lg-12 hero__texto-1 texto__dark">Un poco sobre mi</h1>
+          <h1 class="col-md-4 col-lg-12 hero__texto-1 texto__dark">About me</h1>
         </div>
         <div class="row">
-          <p class="col-md-5 hero__parrafo-1 d-md-none d-lg-block texto__dark">Mi nombre es thomas heim, soy un diseñador e ilustrador de la universidad de valparaíso viviendo en viña del mar. Soy una persona a la que le gusta explorar y aprender nuevas tecnicas y habilidades, una flexibilidad que solo pude obtener en la disciplina del diseño.<br><br>Desde pequeño, siempre he tenido interés en la ilustración y en la expresión de mi creatividad, sin embargo el estudiar diseño me ayudó a enfocar y controlar esa creatividad hacia la creación de soluciones y a la expresión de mensajes y experiencias visuales.</p>
+          <p class="col-md-5 hero__parrafo-1 d-md-none d-lg-block texto__dark">I’m a designer and illustrator graduated from University of Valparaíso, currently living in Viña del Mar, Chile. I’m a person that likes to constantly learn new skills and techniques, a quality that got stronger after becoming a designer.<br><br>Since a very young age, i’ve always been interested in illustration and ways to express my creativity, however studying design helped me focus and control that creativity towards solutions, and visual experiences. </p>
         </div>
         <div class="row">
           <!--ACUERDATE DE PONER TU PORTAFOLIO DE VERDAD ACA CUANDO LO TERMINES-->
           <div class="col-1 sobremi__boton mb-5 ">
-            <button class="boton__custom"><a href="assets/Curriculum Thomas Heim 2020.pdf#page=1" target="_blank">Descarga mi CV</a></button>
+            <button class="boton__custom"><a href="../assets/Thomas-Heim-Resume-2020.pdf#page=1" target="_blank">Download my resume</a></button>
           </div>
         </div>
       </div>
@@ -89,10 +89,10 @@
     <section class="experiencia">
       <div class="container">
         <div class="row">
-          <h2 class="col-md-4 col-lg-3 articulo__titulo sobremi__titulo-experiencia">¿En donde he metido mano antes?</h1>
+          <h2 class="col-md-4 col-lg-3 articulo__titulo sobremi__titulo-experiencia">Where have i worked before?</h1>
           <div class="col-md-7 offset-md-1 experiencia__contenido">
-            <h3 class="experiencia__trabajo articulo__subtitulo-1"><span class="experiencia__trabajo-titulo">Niebla Games</span> // <span class="experiencia__trabajo-rol">Diseñador gráfico - Game designer</span> <br>// <span class="experiencia__trabajo-duracion">2016</span></h3>
-            <h3 class="experiencia__trabajo articulo__subtitulo-1"><span class="experiencia__trabajo-titulo">IDK Games</span> // <span class="experiencia__trabajo-rol">Diseñador gráfico - Game designer - diseñador UI</span> <br>// <span class="experiencia__trabajo-duracion">2015</span></h3>
+            <h3 class="experiencia__trabajo articulo__subtitulo-1"><span class="experiencia__trabajo-titulo">Niebla Games</span> // <span class="experiencia__trabajo-rol">Graphic designer - Game designer</span> <br>// <span class="experiencia__trabajo-duracion">2016</span></h3>
+            <h3 class="experiencia__trabajo articulo__subtitulo-1"><span class="experiencia__trabajo-titulo">IDK Games</span> // <span class="experiencia__trabajo-rol">Graphic designer - Game designer - UI Designer</span> <br>// <span class="experiencia__trabajo-duracion">2015</span></h3>
           </div>
         </div>
       </div>
@@ -102,19 +102,19 @@
     <section class="valores">
       <div class="container">
         <div class="row">
-          <h1 class="col-md-4 col-lg-3 articulo__titulo sobremi__titulo-experiencia texto__dark">¿cuales son mis valores?</h1>
+          <h1 class="col-md-4 col-lg-3 articulo__titulo sobremi__titulo-experiencia texto__dark">what are my strenghts?</h1>
           <div class="col-md-7 offset-md-1 valores__contenido">
             <div class="valores__elemento">
-              <h3 class="articulo__subtitulo-1 texto__dark">// Inquisitivo, autodidacta</h3>
-              <p class="articulo__parrafo-1 texto__dark">Siempre estoy buscando nuevas habilidades o conocimientos que adquirir, y veo cada trabajo como una oportunidad para hacerlo. Si me encuentro con algo que no manejo o que me llame la atención, investigo y trato de almenos entenderlo a un nivel que me permita comunicarme con alguien con experiencia</p>
+              <h3 class="articulo__subtitulo-1 texto__dark">// Self-Driven, Self-taught</h3>
+              <p class="articulo__parrafo-1 texto__dark">I’m always looking for new skills or knowledge to earn, and i see each project as an opportunity to do so. If I find an obstacle or something im not familiar with during my work, I get to investigating to at least understand it to a level that allows me to communicate with some one with more experience in the matter. </p>
             </div>
             <div class="valores__elemento">
-              <h3 class="articulo__subtitulo-1 texto__dark">// Trabajar en equipo</h3>
-              <p class="articulo__parrafo-1 texto__dark">Por mi disciplina, estoy acostumbrado a trabajar con profesionales de distintas areas, lo cual tambien me permite obtener conocimientos y aprender a ver las cosas desde su punto de vista</p>
+              <h3 class="articulo__subtitulo-1 texto__dark">// Team player</h3>
+              <p class="articulo__parrafo-1 texto__dark">Due to the nature of my discipline, i’m used to work with professionals from different fields, which allows me to obtain new points of view and knowledge to solve every problem. </p>
             </div>
             <div class="valores__elemento">
-              <h3 class="articulo__subtitulo-1 texto__dark">// Perfeccionista</h3>
-              <p class="articulo__parrafo-1 texto__dark">Me gusta completar cada proyecto que me propongo de modo que este conforme con el resultado, siempre busco la forma de mejorar cada detalle de mis proyectos hasta que estos lleguen a un nivel con el que este conforme</p>
+              <h3 class="articulo__subtitulo-1 texto__dark">// Perfectionist</h3>
+              <p class="articulo__parrafo-1 texto__dark">I like to see each project to completion, at a point in which I’m happy with the result, always looking for ways to improve every detail, taking every precaution to do so without forcing either myself or others, by planning and organizing my flow of work. </p>
             </div>
           </div>
         </div>
