--- a/en/index.html
+++ b/en/index.html
@@ -9,7 +9,7 @@
     <!--Font Awesome-->
     <script src="https://kit.fontawesome.com/41b8753ddc.js" crossorigin="anonymous"></script>  
     <!--Mi estilo-->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
     <!--Favicon-->
     <link rel="icon" href="assets/favicon.ico" type="image/x-icon"/>
 
@@ -31,29 +31,29 @@
       <div class="collapse navbar-collapse text-right navegacion__contenido" id="navbarNav">
         <ul class="navbar-nav navegacion__contenido-lista">
           <li class="nav-item navegacion__idioma">
-            <a class="nav-link navegacion__contenido-link" href="en/index.html">English<span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item navegacion__quiensoy">
-            <a class="nav-link navegacion__contenido-link" href="sobre-mi.html">Quien soy <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item d-lg-none">
-            <a class="nav-link navegacion__contenido-link" href="#trabajos">Diseño UX<span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item d-lg-none">
-            <a class="nav-link navegacion__contenido-link" href="diseno-grafico.html">Diseño gráfico<span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item d-lg-none">
-            <a class="nav-link navegacion__contenido-link" href="ilustracion.html">Ilustración<span class="sr-only">(current)</span></a>
+            <a class="nav-link navegacion__contenido-link" href="../index.html">Español<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item dropdown d-none d-lg-block">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Mis trabajos
+              My work
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#trabajos">Diseño UX/UI</a>
-              <a class="dropdown-item" href="diseno-grafico.html">Diseño gráfico</a>
-              <a class="dropdown-item" href="ilustracion.html">Ilustración</a>
+              <a class="dropdown-item" href="#trabajos">UX/UI Design</a>
+              <a class="dropdown-item" href="graphic-design.html">Graphic Design</a>
+              <a class="dropdown-item" href="illustration.html">Ilustration</a>
             </div>
+          </li>
+          <li class="nav-item navegacion__quiensoy">
+            <a class="nav-link navegacion__contenido-link" href="about.html">About Me <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item d-lg-none">
+            <a class="nav-link navegacion__contenido-link" href="#trabajos">UX/UI Design<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item d-lg-none">
+            <a class="nav-link navegacion__contenido-link" href="graphic-design.html">Graphic Design<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item d-lg-none">
+            <a class="nav-link navegacion__contenido-link" href="illustration.html">Ilustration<span class="sr-only">(current)</span></a>
           </li>
         </ul> 
       </div>
@@ -72,10 +72,10 @@
   <header id="top" class="panel__fijo panel hero">
     <div class="container-fluid hero__container">
       <div class="row">
-        <h1 class="col-12 col-md-9 hero__texto"><span class="hero__texto-1">¡Hola! </span><br><span class="hero__texto-2">Soy Thomas Heim,</span> <br><button class="hero__boton-1 boton__custom-hero1"><a href="#trabajos">diseñador UX/UI</a></button></h1>
+        <h1 class="col-12 col-md-9 hero__texto"><span class="hero__texto-1">¡Hello! </span><br><span class="hero__texto-2">I'm Thomas Heim,</span> <br><button class="hero__boton-1 boton__custom-hero1"><a href="#trabajos">UX/UI designer</a></button></h1>
       </div>
       <div class="row hero__parrafo-2__container">
-        <h1 class="col-12 col-md-9 offset-md-3 hero__texto hero___parrafo-2"><span class="hero__texto-2">Tambien soy</span><button class="hero__boton-2 boton__custom-hero2"><a href="ilustracion.html">Ilustrador</a></button><span class="hero__texto-2">y</span><br><button class="hero__boton-2 boton__custom-hero2"><a href="diseno-grafico.html">diseñador gráfico</a></button></h1>
+        <h1 class="col-12 col-md-9 offset-md-3 hero__texto hero___parrafo-2"><span class="hero__texto-2">I'm also an</span><button class="hero__boton-2 boton__custom-hero2"><a href="illustration.html">Illustrator</a></button><span class="hero__texto-2">and</span><br><button class="hero__boton-2 boton__custom-hero2"><a href="graphic-design.html">graphic designer</a></button></h1>
       </div>
     </div>
   </header>
@@ -90,7 +90,7 @@
         <button id="ux__second" class="trabajos__boton boton__custom-trabajos"><a href="alveaux.html">Alvea</a></button> 
       </div>
       <div class="row d-none d-xl-block">
-        <button id="ux__second-desktop" class="trabajos__boton boton__custom-trabajos"><a href="alveaux.html">Alvea: La leyenda de los soplavientos</a></button> 
+        <button id="ux__second-desktop" class="trabajos__boton boton__custom-trabajos"><a href="alveaux.html">Alvea: legend of the windmasters</a></button> 
       </div>
     </div>
   </main>   
