--- a/ilustracion.html
+++ b/ilustracion.html
@@ -23,38 +23,43 @@
 </head>
 <body>
   <!--Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light navegacion" id="navegacion">
-    <a class="navbar-brand navegacion__logo" href="index.html"><svg class="navegacion__logo-icono" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 296.8 129.2"><polygon points="260.8 0 198.6 71.9 176.1 53.3 222.2 0 186.3 0 155.2 36 132.4 17.2 111.7 0 70.1 0 94.4 20.1 0 129.2 36 129.2 115.4 37.5 137.8 56 74.4 129.2 110.3 129.2 158.7 73.3 181.2 92 148.9 129.2 184.9 129.2 201.8 109.6 219.6 89.1 296.8 0 "/></svg></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse text-right navegacion__contenido" id="navbarNav">
-      <ul class="navbar-nav navegacion__contenido-lista">
-        <li class="nav-item navegacion__quiensoy">
-          <a class="nav-link navegacion__contenido-link" href="sobre-mi.html">Quien soy <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item d-lg-none">
-          <a class="nav-link navegacion__contenido-link" href="index.html#trabajos">Diseño UX/UI<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item d-lg-none">
-          <a class="nav-link navegacion__contenido-link" href="diseno-grafico.html">Diseño gráfico<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item d-lg-none">
-          <a class="nav-link navegacion__contenido-link" href="ilustracion.html">Ilustración<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item dropdown d-none d-lg-block">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Mis trabajos
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="index.html#trabajos">Diseño UX/UI</a>
-            <a class="dropdown-item" href="diseno-grafico.html">Diseño gráfico</a>
-            <a class="dropdown-item" href="ilustracion.html">Ilustración</a>
-          </div>
-        </li>
-      </ul> 
-    </div>
+<!--Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light navegacion" id="navegacion">
+  <a class="navbar-brand navegacion__logo" href="index.html"><svg class="navegacion__logo-icono" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 296.8 129.2"><polygon points="260.8 0 198.6 71.9 176.1 53.3 222.2 0 186.3 0 155.2 36 132.4 17.2 111.7 0 70.1 0 94.4 20.1 0 129.2 36 129.2 115.4 37.5 137.8 56 74.4 129.2 110.3 129.2 158.7 73.3 181.2 92 148.9 129.2 184.9 129.2 201.8 109.6 219.6 89.1 296.8 0 "/></svg></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse text-right navegacion__contenido" id="navbarNav">
+    <ul class="navbar-nav navegacion__contenido-lista">
+      <li class="nav-item navegacion__idioma">
+        <a class="nav-link navegacion__contenido-link" href="en/illustration.html">English<span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item navegacion__quiensoy">
+        <a class="nav-link navegacion__contenido-link" href="sobre-mi.html">Quien soy <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item d-lg-none">
+        <a class="nav-link navegacion__contenido-link" href="#trabajos">Diseño UX<span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item d-lg-none">
+        <a class="nav-link navegacion__contenido-link" href="diseno-grafico.html">Diseño gráfico<span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item d-lg-none">
+        <a class="nav-link navegacion__contenido-link" href="ilustracion.html">Ilustración<span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item dropdown d-none d-lg-block">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Mis trabajos
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#trabajos">Diseño UX/UI</a>
+          <a class="dropdown-item" href="diseno-grafico.html">Diseño gráfico</a>
+          <a class="dropdown-item" href="ilustracion.html">Ilustración</a>
+        </div>
+      </li>
+    </ul> 
+  </div>
 </nav>
+
 
 <ul class="navegacion__contacto">
   <li class="navegacion__contacto-elemento">
