--- a/alveaux.html
+++ b/alveaux.html
@@ -30,7 +30,7 @@
     <div class="collapse navbar-collapse text-right navegacion__contenido" id="navbarNav">
       <ul class="navbar-nav navegacion__contenido-lista">
         <li class="nav-item navegacion__idioma">
-          <a class="nav-link navegacion__contenido-link" href="en/alveaux.html">English<span class="sr-only">(current)</span></a>
+          <!--<a class="nav-link navegacion__contenido-link" href="en/alveaux.html">English<span class="sr-only">(current)</span></a>-->
         </li>
         <li class="nav-item navegacion__quiensoy">
           <a class="nav-link navegacion__contenido-link" href="sobre-mi.html">Quien soy <span class="sr-only">(current)</span></a>
