--- a/en/alveaux.html
+++ b/en/alveaux.html
@@ -11,7 +11,7 @@
     <!--Mi estilo-->
     <link rel="stylesheet" href="../assets/css/style.css">
     <!--Favicon-->
-    <link rel="icon" href="assets/favicon.ico" type="image/x-icon"/>
+    <link rel="icon" href="../assets/favicon.ico" type="image/x-icon"/>
 
     <!--js js js js js js js-->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer></script>
@@ -214,31 +214,31 @@
     <section id="panelProceso1" class="d-none d-lg-block panel fondo__light">
       <div class="composicion1__barraMenu fondo__light"></div>
       <div class="container-fluid">
-        <div class="row">
+        <div class="row mb-3">
           <div class="col-lg-2 panelProceso1__contenedorForma">
             <div class="panelProceso1__formaCirculo"></div>
             <div class="panelProceso1__formaLinea"></div>
           </div>
           <div class="col-lg-4">
             <h2 class="articulo__titulo my-5">Investigation</h2>
-            <p class="articulo__parrafo-1">Having to integrate into a field that I was new to, the first step I had to take was to investigate, focusing on the illness the project was focused on and the existing treatment methods, to identify the most important factors that affect the handling of the treatment, and be able to propose a solution that’s sensible and aligns with the necessities of all parties involved.</p>
+            <p class="articulo__parrafo-1">Having to integrate into a field that I was new to, the first step I had to take was to investigate, focusing on the illness the project was focused on and the existing treatment methods, to identify the most important factors that affect the handling of the treatment, and be able to propose a solution that’s sensible and aligns with the necessities of all parties involved. With that, the main objectives of this process were:</p>
           </div>
-          <div class="col-lg-5 offset-1 panelProceso1__objetivos fondo__dark">
+          <div class="col-lg-5 offset-1 mb-5 panelProceso1__objetivos fondo__dark">
               <div class="composicion1__barraMenu fondo__dark"></div>
               <div class="panelProceso1__objetivosContenido">
-                <p class="articulo__parrafo-1 texto__dark"> <span class="articulo__titulo texto__dark">1</span>  Identificar los factores más importantes o relevantes que permiten dar sobrevivencia a un paciente crónico en un contexto de tratamiento médico, estableciendo su impacto o efecto en la no adherencia del mismo.</p>
-                <p class="pt-5 articulo__parrafo-1 texto__dark"> <span class="articulo__titulo texto__dark">2</span>  Indagar en las barreras y aspectos que afectan a la adherencia al tratamiento de enfermedades crónicas en pacientes pediátricos.</p>
-                <p class="pt-5 articulo__parrafo-1 texto__dark"> <span class="articulo__titulo texto__dark">3</span>  Entender de qué manera las actividades de juego puede fomentar la adherencia a los tratamientos médicos.</p>
+                <p class="articulo__parrafo-1 texto__dark"> <span class="articulo__titulo texto__dark">1</span>  Identify the most relevant factors that boost survival in a chronic patient in the context of management of treatment of the illness, establishing their impact or effect in their adherence to the treatment.</p>
+                  <p class="pt-5 articulo__parrafo-1 texto__dark"> <span class="articulo__titulo texto__dark">2</span>  Investigate the barriers and other aspects that affect adherence in chronic illness management in pediatric patients. .</p>
+                <p class="pt-5 articulo__parrafo-1 texto__dark"> <span class="articulo__titulo texto__dark">3</span>  Understand in which way game and play activities can promote adherence to chronic illness treatment.</p>
               </div>
           </div>
         </div>
         <div class="row">
           <div class="col-lg-2 pt-5"></div>
           <div class="col-lg-10 mt-5 pt-5">
-            <p class="articulo__parrafo-1">Para estos objetivos, tuve la chance de trabajar en conjunto con profesionales del area, además de un estudio profundo de la bibliografía en torno al manejo de tratamientos y el efecto sobre la psiquis de los pacientes crónicos, lo cual me permitió establecer métricas clave sobre las cuales establecer los objetivos de mi proyecto.</p>
+            <p class="articulo__parrafo-1">In order to accomplish this objectives, I had the chance to work together with professionals from the field, besides a deep study of the bibliography around chronic treatment management and its effects on chronic patients psyche, which allowed me to establish key metrics on which to establish the project objectives.</p>
 
-            <p class="mt-5 pt-5 articulo__parrafo-1">Una vez que tuve un manejo suficiente de la enfermedad en cuestión y de los tratamientos y su efecto en los pacientes desde el punto de vista profesional, mi foco cambio hacia el trabajo con los pacientes, principalmente niños, sobre como ellos perciben la enfermedad y los obstáculos que representa el tratamiento en su dia a dia. Para esto el hospital me abrió las puertas para interactuar y relacionarme con aquellos pacientes que se mostraran interesados en el proyecto, con la autorización de sus padres. <br> Cabe destacar sin embargo, que a pedido de stakeholders relacionados con el proyecto, se han omitido algunos datos con respecto a la enfermedad a tratar u otros detalles. 
-            </p>
+            <p class="mt-5 pt-5 articulo__parrafo-1">Once i had enough knowledge about the particular illness, the treatment process and its effect on the patients from the professional point of view, my focus shifted to working with the patients, mainly children, about how they perceive their illness and the obstacles that the treatment poses on their day to day. For this purpose the hospital let me study and interact with their patients, with authorization from their parents beforehand. 
+              Due to petition from the stakeholders of the project, I’ve been asked to omit some of the details regarding the illness and other details, so I’ll be focusing mainly on the process behind the project.</p>
           </div>
         </div>
       </div>
@@ -250,8 +250,8 @@
         <div class="composicion1__barraMenu fondo__light"></div>
         <div class="row">
           <div class="col-12">
-            <h3 class="articulo__info-titulo hero__subtitulo-1 texto__light">Investigación</h3>
-            <p class="pr-4 articulo__info-parrafo articulo__parrafo-1 texto__light ">Al integrarme en un campo nuevo para mí, uno de los primeros pasos que tuve que tomar para la realización del proyecto fue el de realizar un proceso de investigación, enfocándome en la enfermedad a tratar, y en los métodos de tratamiento existentes, a modo de poder identificar los factores mas importantes que afecten al manejo del tratamiento con el fin de proponer una solución sensible y en línea con las necesidades tanto de los profesionales de salud, los pacientes, y su circulo de cuidado. Para esto propuse los siguientes objetivos para la investigación:</p>
+            <h3 class="articulo__info-titulo hero__subtitulo-1 texto__light">Investigation</h3>
+            <p class="pr-4 articulo__info-parrafo articulo__parrafo-1 texto__light ">In order to accomplish this objectives, I had the chance to work together with professionals from the field, besides a deep study of the bibliography around chronic treatment management and its effects on chronic patients psyche, which allowed me to establish key metrics on which to establish the project objectives:</p>
           </div>
           <div class="mt-5 col-12 fondo__dark">
             <p class="pt-5 pr-4 articulo__info-parrafo articulo__parrafo-1 texto__dark"> <span class="articulo__info-titulo hero__subtitulo-1 texto__dark">1</span>  uno de los primeros pasos que tuve que tomar para la realización del proyecto fue el de realizar un proceso de investigación,</p>
