--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -30,7 +30,7 @@
     <div class="collapse navbar-collapse text-right navegacion__contenido" id="navbarNav">
       <ul class="navbar-nav navegacion__contenido-lista">
         <li class="nav-item navegacion__idioma">
-          <a class="nav-link navegacion__contenido-link" href="en/about.html">English<span class="sr-only">(current)</span></a>
+          <!--<a class="nav-link navegacion__contenido-link" href="en/about.html">English<span class="sr-only">(current)</span></a>-->
         </li>
         <li class="nav-item navegacion__quiensoy">
           <a class="nav-link navegacion__contenido-link" href="sobre-mi.html">Quien soy <span class="sr-only">(current)</span></a>
@@ -74,7 +74,7 @@
           <h1 class="col-md-4 col-lg-12 hero__texto-1 texto__dark">Un poco sobre mi</h1>
         </div>
         <div class="row">
-          <p class="col-md-5 hero__parrafo-1 d-md-none d-lg-block texto__dark">Mi nombre es thomas heim, soy un diseñador e ilustrador de la universidad de valparaíso viviendo en viña del mar. Soy una persona a la que le gusta explorar y aprender nuevas tecnicas y habilidades, una flexibilidad que solo pude obtener en la disciplina del diseño.<br><br>Desde pequeño, siempre he tenido interés en la ilustración y en la expresión de mi creatividad, sin embargo el estudiar diseño me ayudó a enfocar y controlar esa creatividad hacia la creación de soluciones y a la expresión de mensajes y experiencias visuales.</p>
+          <p class="col-md-5 hero__parrafo-1 d-md-none d-lg-block texto__dark">Mi nombre es Thomas Heim, Diseñador Integral de la Universidad de Valparaíso, con especialización en Diseño UX/UI a través del programa Talento Digital de Sence en conjunto con la academia Desafío Latam.  <br><br>Cuento con experiencia en metodologías agiles, incluyendo investigación de usuario, arquitectura de la información y diseño de UI responsiva para móvil, además de 2 años de experiencia laboral en el rubro de los videojuegos, principalmente en game design, diseño de interfaces de usuario y diseño grafico e ilustración conceptual. <br><br> Me caracterizo por ser una persona responsable y organizada con gran capacidad e interés por el aprendizaje, que ve cada proyecto como una posibilidad de pulirme como profesional. Apasionado por los juegos, me gusta incorporar mis conocimientos del área para poder crear experiencias que los usuarios puedan apreciar y valorar.</p>
         </div>
         <div class="row">
           <!--ACUERDATE DE PONER TU PORTAFOLIO DE VERDAD ACA CUANDO LO TERMINES-->
