--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
         <h1 class="col-12 col-md-9 hero__texto"><span class="hero__texto-1">¡Hola! </span><br><span class="hero__texto-2">Soy Thomas Heim,</span> <br><button class="hero__boton-1 boton__custom-hero1"><a href="#trabajos">diseñador UX/UI</a></button></h1>
       </div>
       <div class="row hero__parrafo-2__container">
-        <h1 class="col-12 col-md-9 offset-md-3 hero__texto hero___parrafo-2"><span class="hero__texto-2">Tambien soy</span><button class="hero__boton-2 boton__custom-hero2"><a href="ilustracion.html">Ilustrador</a></button><span class="hero__texto-2">y</span><br><button class="hero__boton-2 boton__custom-hero2"><a href="diseno-grafico.html">diseñador gráfico</a></button></h1>
+        <p class="col-12 col-md-5 pt-5 mt-3 hero__texto-3 hero___parrafo-2 text-left d-none d-md-block">Soy un diseñador integral ubicado en Viña del Mar, Chile con conocimientos en diseño UX/UI para software con metodologías ágiles y experiencia en el área de los videojuegos y el Game Design.<br> Mi pasión es entender la relación entre las personas y las experiencias, y aprender cada día algo nuevo.</p>
+        <h1 class="col-12 col-md-7 hero__texto hero___parrafo-2"><span class="hero__texto-2">Tambien soy</span><button class="hero__boton-2 boton__custom-hero2"><a href="ilustracion.html">Ilustrador</a></button><span class="hero__texto-2">y</span><br><button class="hero__boton-2 boton__custom-hero2"><a href="diseno-grafico.html">diseñador gráfico</a></button></h1>
       </div>
     </div>
   </header>
