--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta property="og:site_name" content="Thomas Heim | Portafolio | Diseñador UX/UI "> 
+    <meta property="og:description" content="Diseñador intergral ubicado en Viña del Mar, Chile, con conocimiento en diseño UX/UI y metodologías ágiles, ilustración y diseño gráfico, con pasión por entender el vinculo entre las personas y las experiencias">
+    <meta property="og:image" content="shareCover.jpg">
+    <meta property="og:type" content="blog">
     <!--Fuentes-->
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@400;600&display=swap" rel="stylesheet"> 
     <!--Font Awesome-->
