--- a/index.html
+++ b/index.html
@@ -4,10 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta property="og:site_name" content="Thomas Heim | Portafolio | Diseñador UX/UI "> 
+    <!-- Primary Meta Tags -->
+    <title>Thomas Heim | Portafolio | Diseño UX/UI</title>
+    <meta name="title" content="Thomas Heim | Portafolio | Diseño UX/UI">
+    <meta name="description" content="Diseñador intergral ubicado en Viña del Mar, Chile, con conocimiento en diseño UX/UI y metodologías ágiles, ilustración y diseño gráfico, con pasión por entender el vinculo entre las personas y las experiencias">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://thomasheimdesign.com/">
+    <meta property="og:title" content="Thomas Heim | Portafolio | Diseño UX/UI">
     <meta property="og:description" content="Diseñador intergral ubicado en Viña del Mar, Chile, con conocimiento en diseño UX/UI y metodologías ágiles, ilustración y diseño gráfico, con pasión por entender el vinculo entre las personas y las experiencias">
-    <meta property="og:image" content="shareCover.jpg">
-    <meta property="og:type" content="blog">
+    <meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://thomasheimdesign.com/">
+    <meta property="twitter:title" content="Thomas Heim | Portafolio | Diseño UX/UI">
+    <meta property="twitter:description" content="Diseñador intergral ubicado en Viña del Mar, Chile, con conocimiento en diseño UX/UI y metodologías ágiles, ilustración y diseño gráfico, con pasión por entender el vinculo entre las personas y las experiencias">
     <!--Fuentes-->
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@400;600&display=swap" rel="stylesheet"> 
     <!--Font Awesome-->
