--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
           <p class="articulo__parrafo-1 pt-3 px-4 px-lg-0">I graduated with a BA degree in Integral Design at the <a href="https://www.uv.cl" target="_blank">University of Valparaiso</a> in Chile, later specializing in UX/UI Design through the <a href="https://talentodigitalparachile.cl">Talento Digital program</a> sponsored by Sence through <a href="https://desafiolatam.com">Desafio Latam academy</a>. Before starting my professional journey, i already knew i wanted to work on the Videogame industry, as a result i aquired a lot of skills and knowledge as a self-taught professional in game design and ux/ui design, experience that helped me not only get into my current position, but also made me a self sufficient, proactive, organized and thorough professional capable of adapting to different work environments. As such i value places where i can be in a constant state of learning, looking for different challenges and more ways to grow as a professional.</p>
         <div class="d-flex justify-content-around pt-4">
           <a class="aboutIcons" href="https://www.linkedin.com/in/thomasheimrojas/"><i class="fa-brands fa-linkedin-in fa-9x"></i></a>
-          <a class="aboutIcons" href="assets/Curriculum Thomas Heim 2020.pdf#page=1" target="_blank"><i class="fa-solid fa-file-pdf fa-9x"></i></a>
+          <a class="aboutIcons" href="assets/Thomas Heim - Resume.pdf" target="_blank"><i class="fa-solid fa-file-pdf fa-9x"></i></a>
         </div>
         <div class="home__experience pt-5 mt-3 px-4 px-lg-0">
           <h2 class="hero__subtitulo-1">Experience</h2>
@@ -616,7 +616,7 @@
             <img class="home__experience-logo" src="assets/img/Icons/niebla_logo_white.png" alt="">
             <div class="home__experience-textContainer ml-3 pl-5">
               <p class="articulo__parrafo-1"> <b>Game designer</b> and <b>Graphic designer</b> at <b>Niebla Games</b></p>
-              <p class="articulo__parrafo-1 pt-1">May 2017 - August 2017</p>
+              <p class="articulo__parrafo-1 pt-1">May 2016 - August 2016</p>
               <p class="articulo__parrafo-1 pt-4 pt-lg-1">Game designer for Causa: Voices of the dusk initial prototypes </p>
               <p class="articulo__parrafo-1 pt-4 pt-lg-1">Graphic designer for Careta: un juego de sumas, restas y artimañas board game</p>
               <p class="articulo__parrafo-1 pt-1 pt-4 pt-lg-1">Niebla games is one of the most prominent Indie game studios outside of the capital in Chile and a licenced partner of Sony Interactive Entertainment and Microsoft Corporation. Initially brought in for an internship, i got hired afterwards to help on the graphic design of their first tabletop game. </p>
