--- a/ilustracion.html
+++ b/ilustracion.html
@@ -19,7 +19,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous" defer></script>
     <script src="assets/js/button-hover.js"></script>
     <!--js js js js js js js--> 
-    <title>Thomas Heim | Ilustración</title>
+    <title>Thomas Heim | Ilustration</title>
 </head>
 <body>
   <!--Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav -->
@@ -29,35 +29,6 @@
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse text-right navegacion__contenido" id="navbarNav">
-    <ul class="navbar-nav navegacion__contenido-lista">
-      <li class="nav-item navegacion__idioma">
-        <!--<a class="nav-link navegacion__contenido-link" href="en/illustration.html">English<span class="sr-only">(current)</span></a>-->
-      </li>
-      <li class="nav-item navegacion__quiensoy">
-        <a class="nav-link navegacion__contenido-link" href="sobre-mi.html">Quien soy <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item d-lg-none">
-        <a class="nav-link navegacion__contenido-link" href="#trabajos">Diseño UX<span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item d-lg-none">
-        <a class="nav-link navegacion__contenido-link" href="diseno-grafico.html">Diseño gráfico<span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item d-lg-none">
-        <a class="nav-link navegacion__contenido-link" href="ilustracion.html">Ilustración<span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item dropdown d-none d-lg-block">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Mis trabajos
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#trabajos">Diseño UX/UI</a>
-          <a class="dropdown-item" href="diseno-grafico.html">Diseño gráfico</a>
-          <a class="dropdown-item" href="ilustracion.html">Ilustración</a>
-        </div>
-      </li>
-    </ul> 
-  </div>
 </nav>
 
 
@@ -78,7 +49,7 @@
     </div>
   <div class="container">
       <div class="row">
-          <h1 class="col-12 offset-md-2 galeria__header-titulo">//Algunas de mis <br>ilustraciones</h1>
+          <h1 class="col-12 offset-md-2 galeria__header-titulo">//Some of my <br>Illustrations</h1>
       </div>
   </div>
   </header>
@@ -118,8 +89,8 @@
               </div>
               <div class="d-none d-lg-block modal__imagen-info">
                 <h3 class="modales__titulo texto__dark">Cronicas del Estallido</h3>
-                <h4 class="modales__subtitulo texto__dark">Ilustraciones para cartas de juego</h4>
-                <h4 class="modales__subtitulo texto__dark">Cliente: Fractal Juegos</h4>
+                <h4 class="modales__subtitulo texto__dark">Card front illustrations</h4>
+                <h4 class="modales__subtitulo texto__dark">Client: Fractal Juegos</h4>
               </div>
             </div>
           </div>
@@ -142,7 +113,7 @@
               </div>
               <div class="d-none d-lg-block modal__imagen-info">
                 <h3 class="modales__titulo texto__dark">The Daily Slice</h3>
-                <h4 class="modales__subtitulo texto__dark">Cliente: Encargo particular</h4>
+                <h4 class="modales__subtitulo texto__dark">Cliente: Commission</h4>
               </div>
             </div>
           </div>
@@ -167,9 +138,9 @@
        
               </div>
               <div class="d-none d-lg-block modal__imagen-info">
-                <h3 class="modales__titulo texto__dark">Alvea: La Leyenda de los Vientos</h3>
-                <h4 class="modales__subtitulo texto__dark">Diseño de personaje</h4>
-                <h4 class="modales__subtitulo texto__dark">Proyecto de titulación</h4>
+                <h3 class="modales__titulo texto__dark">Alvea: Legend of the Windwhisperers</h3>
+                <h4 class="modales__subtitulo texto__dark">Character design</h4>
+                <h4 class="modales__subtitulo texto__dark">Graduation Project</h4>
               </div>
             </div>
           </div>
@@ -198,9 +169,9 @@
        
               </div>
               <div class="d-none d-lg-block modal__imagen-info">
-                <h3 class="modales__titulo texto__dark">Alvea: La Leyenda de los Vientos</h3>
-                <h4 class="modales__subtitulo texto__dark">Diseño de interfaz</h4>
-                <h4 class="modales__subtitulo texto__dark">Proyecto de titulación</h4>
+                <h3 class="modales__titulo texto__dark">Alvea: Legend of the Windwhisperers</h3>
+                <h4 class="modales__subtitulo texto__dark">Interface design</h4>
+                <h4 class="modales__subtitulo texto__dark">Graduation Project</h4>
               </div>
             </div>
           </div>
@@ -224,9 +195,9 @@
                 <img class="d-block modal__vertical-elemento" src="assets/img/ilustraciones/alvea-bg1.png" alt="Alvea-personaje-concept-art">
               </div>
               <div class="d-none d-lg-block modal__imagen-info">
-                <h3 class="modales__titulo texto__dark">Alvea: La Leyenda de los Vientos</h3>
-                <h4 class="modales__subtitulo texto__dark">Diseño de fondo</h4>
-                <h4 class="modales__subtitulo texto__dark">Proyecto de titulación</h4>
+                <h3 class="modales__titulo texto__dark">Alvea: Legend of the Windwhisperers</h3>
+                <h4 class="modales__subtitulo texto__dark">Background Illustration</h4>
+                <h4 class="modales__subtitulo texto__dark">Graduation Project</h4>
               </div>
             </div>
           </div>
@@ -248,8 +219,8 @@
               </div>
               <div class="d-none d-lg-block modal__imagen-info">
                 <h3 class="modales__titulo texto__dark">Mariposas</h3>
-                <h4 class="modales__subtitulo texto__dark">Ilustración</h4>
-                <h4 class="modales__subtitulo texto__dark">Proyecto personal</h4>
+                <h4 class="modales__subtitulo texto__dark">Ilustration</h4>
+                <h4 class="modales__subtitulo texto__dark">Personal project</h4>
               </div>
             </div>
           </div>
@@ -271,8 +242,8 @@
               </div>
               <div class="d-none d-lg-block modal__imagen-info">
                 <h3 class="modales__titulo texto__dark">Urban Streetwear</h3>
-                <h4 class="modales__subtitulo texto__dark">Diseño de personaje</h4>
-                <h4 class="modales__subtitulo texto__dark">Proyecto personal</h4>
+                <h4 class="modales__subtitulo texto__dark">Character design</h4>
+                <h4 class="modales__subtitulo texto__dark">Personal Project</h4>
               </div>
             </div>
           </div>
@@ -293,8 +264,8 @@
                 <img class="d-block modal__vertical-elemento" src="assets/img/ilustraciones/photo-study.png" alt="urban-streetwear">
               </div>
               <div class="d-none d-lg-block modal__imagen-info">
-                <h4 class="modales__subtitulo texto__dark">Estudio de pose</h4>
-                <h4 class="modales__subtitulo texto__dark">Proyecto personal</h4>
+                <h4 class="modales__subtitulo texto__dark">Pose study</h4>
+                <h4 class="modales__subtitulo texto__dark">Personal Project</h4>
               </div>
             </div>
           </div>
