--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
     <!-- Primary Meta Tags -->
     <title>Thomas Heim | UX/UI Designer</title>
     <meta name="title" content="Thomas Heim | Portafolio | Diseño UX/UI">
-    <meta name="description" content="Diseñador intergral ubicado en Viña del Mar, Chile, con conocimiento en diseño UX/UI y metodologías ágiles, ilustración y diseño gráfico, con pasión por entender el vinculo entre las personas y las experiencias">
+    <meta name="description" content="">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://thomasheimdesign.com/">
     <meta property="og:title" content="Thomas Heim | Portafolio | Diseño UX/UI">
-    <meta property="og:description" content="Diseñador intergral ubicado en Viña del Mar, Chile, con conocimiento en diseño UX/UI y metodologías ágiles, ilustración y diseño gráfico, con pasión por entender el vinculo entre las personas y las experiencias">
+    <meta property="og:description" content="">
     <meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://thomasheimdesign.com/">
     <meta property="twitter:title" content="Thomas Heim | Portafolio | Diseño UX/UI">
-    <meta property="twitter:description" content="Diseñador intergral ubicado en Viña del Mar, Chile, con conocimiento en diseño UX/UI y metodologías ágiles, ilustración y diseño gráfico, con pasión por entender el vinculo entre las personas y las experiencias">
+    <meta property="twitter:description" content="">
     <!--Fuentes-->
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@400;600&display=swap" rel="stylesheet"> 
     <!--Font Awesome-->
